decoupled storage provider added Service Bus Simulator added loan submission for loan in the bff side
